Started on Marble
Lots of Marble progress.
Some bugfixes in other parts too.

--- a/coc.html
+++ b/coc.html
@@ -177,7 +177,7 @@
         <script type="text/javascript" src="js/scenes/npcs/giacomo.js"></script>
         <script type="text/javascript" src="js/scenes/npcs/jojo.js"></script>
         <script type="text/javascript" src="js/scenes/npcs/lumi.js"></script>
-        <!--script type="text/javascript" src="js/scenes/npcs/marble.js"></script-->
+        <script type="text/javascript" src="js/scenes/npcs/marble.js"></script>
 		<script type="text/javascript" src="js/scenes/npcs/rathazul.js"></script>
         <script type="text/javascript" src="js/scenes/npcs/amily.js"></script>
 
